--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ h2 {
 
 /* Option Style */
 .option {
-    /* background-color: #f1f1f1; */
-    background: #b1e5b1ac;
+    background-color: #f1f1f1;
+    /* background: #b1e5b1ac; */
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 10px;
